# TrustVoice-Analytics-for-CrediTrust-Financial

./: .flake8  .gitignore  CI_CD_SETUP.md  GOOGLE_DRIVE_SETUP.md  README.md  activate_and_test.bat  config.py  pyproject.toml  pytest.ini  requirements.txt  setup-ci-cd.bat  sync_data.py
.github/workflows/: ci-cd.yml
data/filtered/: filtered_complaints.csv
data/raw/: cfpb_complaints.csv
deploy/: deploy.bat  deploy.sh
notebooks/: 01_eda.ipynb  02_embedding.ipynb  README.md
src/: app.py  google_drive_client.py  list_chroma_collections.py  rag_pipeline.py
tests/: __init__.py  test_rag_pipeline.py  test_streamlit_app.py
